implemented login and logout
